syntax = "proto3";

package parser;

// Описание gRPC-сервиса для парсинга веб-страниц
service ParserService {
  rpc Parse(ParseRequest) returns (ParseResponse);
}

// Сообщение с запросом для парсинга
message ParseRequest {
  string url = 1;
  string correlation_id = 2;  // Добавлено
}

// Сообщение с ответом для парсинга
message ParseResponse {
  string content = 1;
  string correlation_id = 2;  // Добавлено
}
